--- a/NORIC_national_annual_report_public.tex
+++ b/NORIC_national_annual_report_public.tex
@@ -42,8 +42,7 @@
 
 
 % tittelting
-\title{\registernavn \\ \textbf{Årsrapport for \textit{2013} med \\
-plan for forbedringstiltak}}
+\title{\registernavn \\ \textbf{Årsrapport for \textit{2013} til offentliggjøring}}
 
 \author[$\dag$]{Siren Hovland\thanks{Daglig leder: \texttt{siren.hovland@helse-bergen.no}}}
 \author[$\dag$]{Reinhard Seifert\thanks{Statistiker: \texttt{reinhard.seifert@helse-bergen.no}}}
@@ -85,41 +84,42 @@ indi-kator-er styrings-gruppe}
 \thispagestyle{empty}
 
 
-\chapter{Sammendrag}
-Norsk register for invasiv kardiologi (NORIC) ble etablert som nasjonalt medisinsk kvalitetsregister i 2012. NORIC inngår som et av flere kvalitetsregistre knyttet til Hjerte- og karregisteret ved det nasjonale folkehelseinstitutt. Registeret omfatter invasive kardiologiske prosedyrer som koronar angiografi og perkutan koronar intervensjon (PCI), og har også modul for perkutan hjerteklaffbehandling og CT-angiografi.
-Programvaren for registrering av pasientdata ble tatt i bruk ved Haukeland universitetssjukehus (HUS) 1.januar 2013 og ved Universitetssykehuset Nord-Norge (UNN) fra 1. mai 2013. Registerplattformen er senere (2014) blitt implementert ved ytterligere 4 av landets øvrige invasive sentre, mens 2 sykehus ikke har startet ennå.
-Resultatene for 2013 omfatter derfor bare UNN og HUS, og viser stor grad av samsvar når det gjelder andel av pasienter som får utført PCI (41 \%). Andelen av planlagte (elektive) prosedyrer er høyere ved UNN (48,7 \%) enn ved HUS (40,2 \%), mens andelen subakutte prosedyrer er tilsvarende lavere ved UNN (39 \%) sammenlignet med HUS (46 \%). Andelen av pasienter med indikasjon stabil koronarsykdom er høyere ved UNN (38,6 \%) enn ved HUS (29,2 \%), mens andelen ustabil angina er lavere ved UNN (14.4 \%) enn ved HUS (21 \%). Registreringene viser at det er betydelige forskjeller i bruk av supplerende intrakoronar diagnostikk ved de to sykehusene, med større bruk av intravaskulær ultralyd (IVUS) og måling av fractional flow reserve (FFR) ved HUS. 
-Analyser av ventetid for pasienter med non-ST-segment-elevation myocardial infarction (NSTEMI) viser betydelig forskjeller mellom de to sykehusene med vesentlig lengre ventetid ved HUS enn ved UNN. For pasienter som blir innlagt direkte til disse sykehusene er median ventetid 2 døgn ved HUS og 1 døgn ved UNN. For pasienter som først blir innlagt ved annet sykehus er median ventetid ved HUS 5 døgn og 3 døgn ved UNN. Spesielt ved HUS er ventetiden for mange pasienter vesentlig lengre enn det som er anbefalt i internasjonale retningslinjer.
+
+\chapter{Formålet til registeret}
+Norsk register for invasiv kardiologi (NORIC) inngår som et av flere kvalitetsregistre knyttet til Hjerte- og karregisteret ved Folkehelseinstituttet og omfatter invasive kardiologiske prosedyrer. Formålet for registeret er derfor regulert av forskriften til Hjerte- og karregisteret; ''å bidra til bedre kvalitet på helsehjelpen til personer med hjerte- og karsykdommer. Opplysninger i registeret skal benyttes til forebyggende arbeid, kvalitetsforbedring og helseforskning. Registeret skal også utgjøre et grunnlag for styring og planlegging av helsetjenester rettet mot personer med hjerte- og karsykdommer, overvåkning av nye tilfeller og forekomst av slike sykdommer i befolkningen''.
+
+\chapter{Pasientgruppen som omfattes av registeret}
+Pasienter som får utført invasive kardiologiske prosedyrer ved sykehus i Norge er omfattet av registeret. Det innbefatter i første rekke undersøkelser og behandlingsformer som koronar angiografi og PCI der tilgangen til hjertet er perkutan, til forskjell fra åpen kirurgisk tilgang. Registeret har også moduler for perkutan hjerteklaff-behandling og for koronar CT-angiografi. Registeret omfatter ikke elektrofysiologiske undersøkelser og behandlinger, og ikke pacemakerbehandling.
 
 
-\chapter{Registerbeskrivelse}\label{cha:reg}
+\chapter{Oversikt over sykehusene som behandler pasientgruppen}
+Tabellen \ref{tab:oppstart} viser hvilke sykehus som behandler denne pasientgruppen. De to første startet registreringer i NORIC i 2013 og ytterligere 4 andre fra januar 2014.  Rikshopsitalet og Feiringklinikken har ennå ikke begynt med registreringer.
+
+\begin{table}[ht]
+\centering
+\begin{tabular}{lr}
+    \toprule
+    Sykehus & Oppstart dato\\
+    \midrule
+    Haukeland universitetssjukehus & 01.01.2013\\
+    Universitetssykehuset Nord-Norge & 01.05.2013\\
+    St. Olavs hospital & 01.01.2014\\
+    Stavanger universitetssjukehus & 01.01.2014\\
+    Sørlandet sykehus, Arendal & 01.01.2014\\
+    Oslo universitetssykehus, Ullevål & 01.01.2014\\
+    Oslo universitetssykehus, Rikshospitalet & Ikke startet ennå\\
+    Feiringklinikken & Ikke startet ennå\\
+    \bottomrule
+\end{tabular}
+\label{tab:oppstart}
+\caption{Oversikt over deltakende sykehus/senter og oppstarts dato}
+\end{table}
+
+\clearpage
 
 
-\section{Bakgrunn og formål}
 
-\subsection{Bakgrunn for registeret}\label{sec:bak}
-Norsk register for invasiv kardiologi (NORIC) er et nasjonalt kvalitetsregister som omfatter invasive kardiologiske prosedyrer som blir utført ved sykehus i Norge. Det innbefatter i første rekke undersøkelser og behandlingsformer som koronar angiografi og PCI der tilgangen til hjertet er perkutan, til forskjell fra åpen kirurgisk tilgang. Registeret har også moduler for perkutan hjerteklaff-behandling og for koronar CT-angiografi. Registeret omfatter ikke elektrofysiologiske undersøkelser og behandlinger, og ikke pacemakerbehandling. Forventet volum av prosedyrer er knapt 30000 årlige angiografier og 12000 PCIer.  
-
-\subsection{Registerets formål}\label{sec:for}
-Overordnet formål med registeret er gitt ved Hjerte- og karregisterforskriften §1-2: 
-``Formålet med Hjerte- og karregisteret er å bidra til bedre kvalitet på helsehjelpen til personer med hjerte- og karsykdommer. Opplysninger i registeret skal benyttes til forebyggende arbeid, kvalitetsforbedring og helseforskning. Registeret skal også utgjøre et grunnlag for styring og planlegging av helsetjenester rettet mot personer med hjerte- og karsykdommer, overvåkning av nye tilfeller og forekomst av slike sykdommer i befolkningen''.
-
-\section{Juridisk hjemmelsgrunnlag}\label{cha:jur}
-Lovhjemmel for registeret er Helseregisterloven med tilknyttet forskrift: Forskrift om innsamling og behandling av helseopplysninger i Nasjonalt register over hjerte- og karlidelser (Hjerte- og karregisterforskriften). 
-
-\section{Faglig ledelse og databehandlingsansvar}\label{cha:led}
-Det er ansatt en faglig leder i 20 \% stilling som er invasiv kardiolog. I tillegg er det ansatt daglig leder (60\%), registerkoordinator (40\%) og statistiker (50\%). Norsk register for invasiv kardiologi er lagt til Hjerteavdelingen ved Haukeland universitetssjukehus. Det ble inngått en skriftlig databehandler avtale mellom Helse Bergen HF og Nasjonalt folkehelseinstitutt den 10. oktober 2013.
-
-\subsection{Aktivitet i styringsgruppe/referansegruppe}
-Registeret har etablert en nasjonal faglig styringsgruppe bestående av én representant fra hvert av de sykehusene som utfører prosedyrer omfattet av registeret. I 2013 ble det avholdt to møter som i hovedsak omhandlet gjennomgang av variabler samt plan for oppstart av pasientregistreringer på de resterende 6 av totalt 8 invasive sentre.  
-
-
-
-
-
-
-\chapter{Resultater}\label{cha:res}
-
+\chapter{De viktigste resultatene}
 
 \section{Innledning}
 
@@ -237,7 +237,7 @@ Analyser av ventetid for pasienten med NSTEMI (ikke-ST-elevasjonsinfarkt) viser 
 
 
 % latex table generated in R 3.1.1 by xtable 1.7-4 package
-% Mon Oct  6 11:52:06 2014
+% Mon Oct  6 11:51:58 2014
 \begin{table}[ht]
 \centering
 \begin{tabular}{rrrrrr}
@@ -261,7 +261,7 @@ Haukeland universitetssjukehus & 1287 & 444 & 1473 & 0 & 3204 \\
 
 \begin{tiny}
 % latex table generated in R 3.1.1 by xtable 1.7-4 package
-% Mon Oct  6 11:52:06 2014
+% Mon Oct  6 11:51:58 2014
 \begin{table}[ht]
 \centering
 \begin{tabular}{rrrrr}
@@ -290,7 +290,7 @@ Haukeland universitetssjukehus & 40.2 & 13.9 & 46.0 & 0.0 \\
 
 \begin{tiny}
 % latex table generated in R 3.1.1 by xtable 1.7-4 package
-% Mon Oct  6 11:52:06 2014
+% Mon Oct  6 11:51:58 2014
 \begin{table}[ht]
 \centering
 \begin{tabular}{rrrrrr}
@@ -316,7 +316,7 @@ Haukeland universitetssjukehus & 1914 & 169 & 1121 & 0 & 3204 \\
 
 \begin{tiny}
 % latex table generated in R 3.1.1 by xtable 1.7-4 package
-% Mon Oct  6 11:52:06 2014
+% Mon Oct  6 11:51:58 2014
 \begin{table}[ht]
 \centering
 \begin{tabular}{rrrrr}
@@ -345,7 +345,7 @@ Haukeland universitetssjukehus & 59.7 & 5.3 & 35.0 & 0.0 \\
 
 \begin{tiny}
 % latex table generated in R 3.1.1 by xtable 1.7-4 package
-% Mon Oct  6 11:52:06 2014
+% Mon Oct  6 11:51:58 2014
 \begin{table}[ht]
 \centering
 \begin{tabular}{rrrrrrrr}
@@ -370,7 +370,7 @@ Haukeland universitetssjukehus & 1280 & 190 & 219 & 1272 & 98 & 145 & 3204 \\
 
 \begin{tiny}
 % latex table generated in R 3.1.1 by xtable 1.7-4 package
-% Mon Oct  6 11:52:06 2014
+% Mon Oct  6 11:51:58 2014
 \begin{table}[ht]
 \centering
 \begin{tabular}{rrrrrrr}
@@ -399,7 +399,7 @@ Haukeland universitetssjukehus & 40.0 & 5.9 & 6.8 & 39.7 & 3.1 & 4.5 \\
 
 \begin{tiny}
 % latex table generated in R 3.1.1 by xtable 1.7-4 package
-% Mon Oct  6 11:52:06 2014
+% Mon Oct  6 11:51:58 2014
 \begin{table}[ht]
 \centering
 \begin{tabular}{rrrrrrrr}
@@ -425,7 +425,7 @@ Haukeland universitetssjukehus & 936 & 674 & 757 & 335 & 471 & 31 & 3204 \\
 
 \begin{tiny}
 % latex table generated in R 3.1.1 by xtable 1.7-4 package
-% Mon Oct  6 11:52:06 2014
+% Mon Oct  6 11:51:58 2014
 \begin{table}[ht]
 \centering
 \begin{tabular}{rrrrrrr}
@@ -455,7 +455,7 @@ Haukeland universitetssjukehus & 29.2 & 21.0 & 23.6 & 10.5 & 14.7 & 1.0 \\
 
 \begin{tiny}
 % latex table generated in R 3.1.1 by xtable 1.7-4 package
-% Mon Oct  6 11:52:06 2014
+% Mon Oct  6 11:51:58 2014
 \begin{table}[ht]
 \centering
 \begin{tabular}{rrrrrrrrr}
@@ -480,7 +480,7 @@ Haukeland universitetssjukehus & 136 & 1012 & 676 & 65 & 1115 & 2 & 198 & 3204 \
 
 \begin{tiny}
 % latex table generated in R 3.1.1 by xtable 1.7-4 package
-% Mon Oct  6 11:52:06 2014
+% Mon Oct  6 11:51:58 2014
 \begin{table}[ht]
 \centering
 \begin{tabular}{rrrrrrrr}
@@ -510,7 +510,7 @@ Haukeland universitetssjukehus & 4.2 & 31.6 & 21.1 & 2.0 & 34.8 & 0.1 & 6.2 \\
 
 \begin{tiny}
 % latex table generated in R 3.1.1 by xtable 1.7-4 package
-% Mon Oct  6 11:52:06 2014
+% Mon Oct  6 11:51:58 2014
 \begin{table}[ht]
 \centering
 \begin{tabular}{rrrrrrrrrrrr}
@@ -536,7 +536,7 @@ Haukeland universitetssjukehus & 846 & 554 & 614 & 13 & 37 & 77 & 167 & 1 & 859 
 
 \begin{tiny}
 % latex table generated in R 3.1.1 by xtable 1.7-4 package
-% Mon Oct  6 11:52:06 2014
+% Mon Oct  6 11:51:58 2014
 \begin{table}[ht]
 \centering
 \begin{tabular}{rrrrrrrrrrr}
@@ -558,7 +558,7 @@ Haukeland universitetssjukehus & 26.4 & 17.3 & 19.2 & 0.4 & 1.2 & 2.4 & 5.2 & 0.
 \section{Antall annen diagnostikk}
 
 % latex table generated in R 3.1.1 by xtable 1.7-4 package
-% Mon Oct  6 11:52:06 2014
+% Mon Oct  6 11:51:58 2014
 \begin{table}[ht]
 \centering
 \begin{tabular}{rrrrr}
@@ -577,7 +577,7 @@ Haukeland universitetssjukehus & 220 & 6.9 & 75 & 2.3 \\
 \section{Tid fra innleggelse i sykehus til prosedyre}
 
 % latex table generated in R 3.1.1 by xtable 1.7-4 package
-% Mon Oct  6 11:52:06 2014
+% Mon Oct  6 11:51:58 2014
 \begin{table}[ht]
 \centering
 \begin{tabular}{rrrr}
@@ -595,150 +595,20 @@ Haukeland universitetssjukehus / Henvist & 3.0 & 5.0 & 7.0 \\
 
 
 
-\clearpage
-\chapter{Metoder for fangst av data}\label{cha:metoder}
 
-\section{Arbeitsflyt}
-\begin{figure}
-  \label{fig:workflow}
-  \includegraphics[width=0.95\textwidth]{noric_workflow.png}
-  \caption{Oversikt over skjemaer og arbeidsflyt}
-\end{figure}
+\chapter{Dekningsgrad på enhet og individnivå}
+NORIC er ikke koblet til basisiregisteret ennå og har ikke kunnet gjennomføre dekningsgradsanalyser på indivinivå.  På institusjonsnivå er det 95 – 97 \% dekningsgrad målt mot dataprogram (Orbit) som blir brukt til planlegging av laboratoriedriften.
 
-Registreringen av data vil delvis bli gjort av den legen som utfører prosedyren og delvis av annet helsepersonell og kontorpersonell. Fordelingen av arbeidet mellom disse personellgruppene vil være avhengig av lokale forhold ved det enkelte senter. Data vil bli registrert direkte via en web-løsning til lokale kvalitetsregister som er administrert av Helse Nord IKT. Data fra de enkelte lokale kvalitetsregistrene blir så overført til det nasjonale kvalitetsregisteret, NORIC. De sykehusene som tok i bruk registeret i 2013 var Haukeland universitetssjukehus (HUS) og Universitetssykehuset Nord-Norge (UNN).
-
-Figur \ref{fig:workflow} gir en oversikt over registerets fire skjemaer med et utvalg av tilhørende variabler. Ved HUS er det den enkelte operatør som primært fyller ut hovedskjemaet i registeret. De resterende skjemaer blir supplert i ettertid av annet helsepersonell. Ved UNN er det operatøren som i hovedsak fyller ut samtlige skjemaer. 
-
-
-
-\chapter{Metodisk kvalitet}\label{cha:kva}
-
-\section{Antall registreringer}\label{sec:reg}
-Per 31.12.2013 var det 5031 registrerte opphold i NORIC, hvor opphold er definert som besøk eller undersøkelser ved invasivt kardiologisk laboratorium for diagnostikk eller behandling. Disse oppholdene er fordelt på 2982 angiografier, 1811 med kombinert angiografi + PCI, og 238 prosedyrer der det bare ble utført PCI, det vi si til sammen 4793 koronar angiografier og 2049 PCIer (jfr. tabell 3.3).  
-
-\section{Metode for beregning av dekningsgrad}\label{sec:met}
-NORIC er ennå ikke koblet til basisregisteret ved Folkehelseinstituttet, så dekningsgradsanalyser er begrenset til summariske opplysninger fra sykehusinterne datasystem. Dette er bare utført for HUS ved hjelp av registreringer i Orbit, da det ikke er tilsvarende registreringer ved UNN. 
-
-\section{Dekningsgrad på institusjonsnivå}\label{sec:endek}
-For 2013 er det ved HUS registrert 3035 angiografier og 1290 PCIer i NORIC og 3133 angiografier og 1360 PCIer  i Orbit. Dette gir en dekningsgrad på henholdsvis 97 og 95 \%.
-
-\section{Dekningsgrad på individnivå}\label{sec:obs}
-Ikke utført for 2013.
-
-\section{Metoder for intern sikring av datakvalitet}\label{sec:sik}
-Under utfyllingen av det web-baserte registreringsskjemaet blir variabler der dette er mulig og aktuelt, automatisk sjekket mot andre variabler for å sikre samsvar mellom disse. Kvaliteten på data blir også forsøkt sikret ved å sjekke at de verdiene som blir lagt inn, er innenfor grenser som er sannsynlige eller tillatt. 
-
-Registreringene blir dels utfylt i tilknytning til selve prosedyren av operatør og radiograf/sykepleier. Etter intensjonen skal dette kvalitetssikres og bli supplert i ettertid av registreringspersonale ved det enkelte sykehus mot journalopplysninger og eventuelt annen informasjon som måtte foreligge. Praksis på dette punktet varierer nok en god del mellom deltakende sykehus.
-
-\section{Metode for validering av data i registeret}\label{sec:metval}
-Ikke utført for 2013.
-
-\section{Vurdering av datakvalitet}\label{sec:valdat}
-Ikke utført analyser av dette for 2013.
-
-
-
-
-\chapter{Fagutvikling og klinisk kvalitetsforbedring}\label{cha:fag}
-
-\section{Registerets spesifikke kvalitetsmål}\label{sec:regspe}
-Spesifikke kvalitetsmål er ikke endelig bestemt, men vil omfatte mål på om virksomheten er i samsvar med anbefalinger i internasjonale retningslinjer. Eksempler på dette er ventetid på invasiv utredning ved NSTEMI (ikke-ST-elevasjonsinfarkt) og ``Dør til ballongtid'' ved STEMI (ST-elevasjonsinfarkt). Vi vil også se på 30-dagers mortalitet etter PCI. Vi vil også utvikle andre prosedyrespesifikke kvalitetsmål som stråledoser ved angiografi.
-
-\section{Pasientrapporterte resultat- og erfaringsmål (PROM og PREM)}\label{sec:pasutk}
-Det er foreløpig ikke utarbeidet en plan for registrering av pasientrapporterte resultat- og erfaringsmål.
-
-\section{Sosiale og demografiske ulikheter i helse}\label{sec:sosdem}
-Sosiale og demografiske ulikheter er i liten grad med i registeret siden det ikke er hjemmel for å registrere dette i henhold til Hjerte- og karregisterforskriften. Det er kun variabler som alder, kjønn og kommunetilhørighet som nå registreres via kobling til Folkeregisteret.
-
-\section{Bidrag til utvikling av nasjonale retningslinjer, nasjonale kvalitetsindikatorer o.l.}\label{sec:retut}
-Dette vil bli tatt opp i løpet av høsten 2014.
-
-\section{Etterlevelse av nasjonale retningslinjer}\label{sec:retbru}
-Det er ikke utviklet nasjonale retningslinjer for dette fagområdet.
-
-\section{Identifisering av kliniske forbedringsområder}\label{sec:ide}
-Analyser som er utført for Haukeland universitetssjukehus har vist at ventetiden for angiografi/PCI ved NSTEMI er vesentlig lengre enn anbefalt i internasjonale aksepterte retningslinjer. Dette gjelder i særlig grad pasienter som henvises fra andre sykehus.
-
-\section{Tiltak for klinisk kvalitetsforbedring initiert av registeret}\label{sec:brures}
-Ledelsen ved aktuell avdeling er gjort oppmerksom på problemet med lang ventetid ved NSTEMI. Det blir forsøkt å prioritere denne type pasienter til slike undersøkelser, men utover det kjenner vi ikke til spesifikke tiltak.
-
-\section{Evaluering av tiltak for klinisk kvalitetsforbedring (endret praksis)}\label{sec:evakva}
-Det er kort tid siden resultatene ble lagt fram slik at analyser på utviklingen etter dette ikke er utført ennå.
-
-\section{Pasientsikkerhet}\label{sec:kom}
-I NORIC registreres komplikasjoner som kan være livstruende, behandlingskrevende, gi varige mén eller forlenge sykehusoppholdet for pasienten. Det skilles mellom komplikasjoner og/eller uønskede hendelser som oppstår i direkte tilknytning til prosedyren og etter at pasienten er overflyttet til sengepost eller sykehusavdeling. Dette omfatter en rekke variabler: allergiske reaksjoner, blødninger (registreres i detalj), vaskulær (utenom koronare kar), neurologisk komplikasjon, nytilkommet nyreinsuffisiens, tamponade, komplikasjon i behandlet koronarkar med ny PCI, ACB-operasjon på grunn av komplikasjon, hjerteinfarkt og død.
-
-
-
-\chapter{Formidling av resultater}\label{cha:dat}
-
-
-\section{Resultater tilbake til deltakende fagmiljø}\label{sec:resfag}
-Ved hjelp av Rapporteket er det nå laget 2 rapporter fra virksomheten ved det enkelte senter. Denne vil bli sendt regelmessig til fagmiljøet. Så snart det er etablert en samlet database for alle senter, vil tallene i rapporten til det enkelte senter kunne sammenlignes med tilsvarende for hele landet.
-
-\section{Resultater til administrasjon og ledelse}\label{sec:resled}
-Vi har så langt latt resultater fra registeret gå tjenestevei fra seksjonsledelse til høyere nivå.
-
-\section{Resultater til pasienter}\label{sec:respas}
-Vi har ikke gjennomført formidling av resultater til pasienter. Det planlegges oppretting av egen nettside hvor pasienter kan hente informasjon om registeret og hvor årsrapporter vil kunne lastes ned.
-
-\section{Offentliggjøring av resultater på institusjonsnivå}\label{sec:off}
-Resultater på institusjonsnivå blir for første gang presentert i denne årsrapporten, men er begrenset til resultater fra UNN og HUS som var de eneste som brukte registeret i 2013. Utenom dette er resultater for ventetider ved NSTEMI ved HUS presentert på Kvalitetsregisterkonferansen og på Vårmøtet i Norsk Cardiologisk Selskap.
-
-
-
-\chapter{Samarbeid og forskning}\label{cha:for}
-
-
-\section{Samarbeid med andre helse- og kvalitetsregistre}\label{sec:samfag}
-Vi samarbeider med det tilsvarende svenske kvalitetsregisteret for invasiv kardiologi (SCAAR). I oppbyggingen av NORIC har vi brukt SCAAR som modell, og det er viktig for oss å dra nytte av de erfaringer som er gjort gjennom mange år med registerarbeid der. Vi bruker i stor grad samme variabeldefinisjoner for å sikre at vi kan sammenligne resultater og bruke registrene i felles vitenskapelige publikasjoner.
-
-\section{Vitenskapelige arbeider}\label{sec:vitarb}
-Registeret er i oppbyggingsfase slik at det er svært begrenset hva vi har gjort så langt. Vi har presentert resultater fra Haukeland universitetssjukehus på Kvalitetsregisterkonferansen i 2014 og på vårmøtet til Norsk Cardiologisk Selskap.
+\chapter{Hvordan resultatene har blitt benyttet i kvalitetsforbedringsarbeid}
+Analyser som er utført for Haukeland universitetssjukehus har vist at ventetiden for angiografi/PCI ved NSTEMI (ikke-ST-elevasjonsinfarkt) er vesentlig lengre enn anbefalt i internasjonalt aksepterte retningslinjer. Dette gjelder i særlig grad pasienter som henvises fra andre sykehus. Ledelsen ved aktuell avdeling er gjort oppmerksom på problemet med lang ventetid ved NSTEMI. Det blir forsøkt å prioritere denne type pasienter til slike undersøkelser, og det vil bli satt ned en gruppe for å vurdere flere tiltak.
 
 
 
 
 
-\part{Plan for forbedringstiltak}\label{par:for}
-
-\chapter{Forbedringstiltak}
-
-\section{Datafangst}
-
-Dataregistrering foregår på samme måte som tidligere ved at operatør sammen med sykepleier/radiograf og eget registreringspersonell legger inn bakgrunnsopplysninger om pasienten, data fra prosedyren og opplysninger om utskrivelsen og eventuelle komplikasjoner. I tillegg ønsker vi å utvikle et system for direkte overføring av stråledoser fra angiografi/PCI - prosedyrene til registeret.
 
 
-\section{Metodisk kvalitet}
-
-I 2013 var registeret tatt i bruk ved 2 sykehus og fra 1.1.2014 ved ytterligere 4 (tabell \ref{tab:oppstart}). Vi vil arbeide for at Rikshospitalet og Feiringklinikken også skal ta i bruk kvalitetsregisteret.
-
-Dekningsgradsanalyser vil bli gjennomført ved hjelp av data fra NPR når vi er koblet opp mot Nasjonalt hjerte- og karregister. For det enkelte sykehus vil vi tilstrebe løsninger for fortløpende kontroll (daglig/ukentlig) mot andre kliniske registreringssystem for å sjekke at alle pasienter blir registrert. Dette er allerede implementert ved Haukeland universitetssjukehus ved kontroll mot Orbit, et datasystem som blir brukt til planlegging av programmet på laboratoriene. 
-
-
-\begin{table}[ht]
-\centering
-\begin{tabular}{lr}
-    \toprule
-    Sykehus & Oppstart dato\\
-    \midrule
-    Haukeland universitetssjukehus & 01.01.2013\\
-    Universitetssykehuset Nord-Norge & 01.05.2013\\
-    St. Olavs hospital & 01.01.2014\\
-    Stavanger universitetssjukehus & 01.01.2014\\
-    Sørlandet sykehus, Arendal & 01.01.2014\\
-    Oslo universitetssykehus, Ullevål & 01.01.2014\\
-    Oslo universitetssykehus, Rikshospitalet & Ikke startet ennå\\
-    Feiringklinikken & Ikke startet ennå\\
-    \bottomrule
-\end{tabular}
-\label{tab:oppstart}
-\caption{Oversikt over deltakende sykehus/senter og oppstarts dato}
-\end{table}
-
-
-
-\section{Fagutvikling og kvalitetsforbedring av tjenesten}
+\chapter{Fagutvikling og kvalitetsforbedring av tjenesten}
 
 I løpet av 2014 vil vi bestemme nye kvalitetsmål for registeret. I den forbindelse vil vi også se på de kvalitetsmål som blir brukt i Sverige på tilsvarende register der.  Disse er delvis basert på etterlevelse av aksepterte guidelines (retningslinjer) for behandling av spesifikke tilstander.   
 
@@ -747,73 +617,12 @@ Vi ønsker å utvikle system for pasientrapporterte resultater, men er avhengig 
 Våre muligheter til å registrere demografiske og sosiale variabler er begrenset siden disse ikke er hjemlet i forskrift for Hjerte- og karregisteret.
 
 
-\section{Formidling av resultater}
+\chapter{Formidling av resultater}
 
 Vi har til nå laget en månedsrapport for virksomheten og en rapport som viser forbruket av forskjellige stenter. Vi vil videreutvikle rapportene til fagmiljøene med bl.a. ulike prosessmål og en rapport som viser stråledoser. Vi tar også sikte på å utvikle rapporter for den enkelte operatør, slik at vedkommende kan sjekke sin praksis med et gjennomsnitt for landet.  
 
 Noen av disse rapportene vil kunne finnes på web-siden til registeret og dermed tilgjengelig for pasienter og andre interesserte.
 
-
-
-
-\part{Stadievurdering}
-
-
-\chapter{Referanser til vurdering av stadium}
-
-\begin{longtable}{rp{7cm}lcc}
-  \caption[Vurderingspunkter for stadium \registernavn]
-  {Vurderingspunkter for stadium \registernavn} \\
-  \hline 	 
-  Nr & Beskrivelse & Kapittel & Ja & Nei \\ 	 
-  \hline 	 
-  \endfirsthead 	 
-  \caption[]{forts.}\\ 	 
-  \hline 	 
-  Nr & Beskrivelse & Kapittel & Ja & Nei \\
-  \hline 	 
-  \endhead
-  \\
-  \multicolumn{4}{c}{\textit{Tabellen fortsetter på neste side}} \\
-  \hline
-  \endfoot 	 
-  \hline 	 
-  \endlastfoot
-
-  & \textbf{Stadium 2} & & \\
-  1 & Er i drift og samler data fra HF i alle helseregioner & \ref{cha:res} & \Square & \CheckedBox \\
-  2 & Presenterer resultater på nasjonalt nivå & \ref{cha:res} & \Square & \CheckedBox \\
-  3 & Har en konkret plan for gjennomføring av dekningsgradsanalyser & \ref{sec:met} & \CheckedBox & \Square \\
-  4 & Har en konkret plan for gjennomføring av analyser og løpende rapportering av resultater på sykehusnivå tilbake til deltakende enheter & \ref{sec:resfag} & \CheckedBox & \Square \\
-  5 & Har en oppdatert plan for videre utvikling av registeret & Del \ref{par:for} & \CheckedBox & \Square \\
-  & & & \\
-
-  & \textbf{Stadium 3} & & \\
-  6 & Kan redegjøre for registerets datakvalitet & \ref{sec:sik}, \ref{sec:metval}, \ref{sec:valdat} & \Square & \CheckedBox \\
-  7 & Har beregnet dekningsgrad mot uavhengig datakilde & \ref{sec:met}, \ref{sec:endek}, \ref{sec:obs} & \Square & \CheckedBox \\
-  8 & Registrerende enheter kan få utlevert egne aggregerte og nasjonale resultater & \ref{sec:resfag} & \Square & \CheckedBox \\
-  9 & Presenterer deltakende enheters etterlevelse av de viktigste nasjonale retningslinjer der disse finnes & \ref{sec:retbru} & \Square & \CheckedBox \\
-  10 & Har identifisert kliniske forbedringsområder basert på analyser fra registeret & \ref{sec:ide} & \CheckedBox & \Square \\
-  11 & Brukes til klinisk kvalitetsforbedringsarbeid & \ref{sec:brures}, \ref{sec:evakva} & \CheckedBox & \Square \\
-  12 & Resultater anvendes vitenskapelig & \ref{sec:vitarb} & \Square & \CheckedBox \\
-  13 & Presenterer resultater for PROM/PREM & \ref{sec:pasutk} & \Square & \CheckedBox \\
-  14 & Har en oppdatert plan for videre utvikling av registeret & Del \ref{par:for} & \CheckedBox & \Square \\
-  & & & \\
-
-  & \textbf{Stadium 4} & & \\
-  15 & Kan dokumentere registerets datakvalitet gjennom valideringsanalyser & \ref{sec:valdat} & \Square & \CheckedBox \\
-  16 & Presenterer oppdatert dekningsgradsanalyse hvert 2. år & \ref{sec:met}, \ref{sec:endek}, \ref{sec:obs} & \Square & \CheckedBox \\
-  17 & Har dekningsgrad over 80\% & \ref{sec:obs} & \CheckedBox & \Square \\
-  18 & Registrerende enheter har løpende (online) tilgang til oppdaterte egne og nasjonale resultater & \ref{sec:resfag}, \ref{sec:off} & \Square & \CheckedBox \\
-  19 & Presentere resultater på sosial ulikhet i helse & \ref{sec:sosdem} & \Square & \CheckedBox \\
-  20 & Resultater fra registeret er tilpasset og tilgjengelig for pasienter & \ref{sec:respas} & \Square & \CheckedBox \\
-  21 & Kunne dokumentere at registeret har ført til kvalitetsforbedring/endret klinisk praksis & \ref{sec:evakva} & \Square & \CheckedBox \\
-  \label{tab:sta} 	 
-\end{longtable}
-
-
-\listoffigures
-\listoftables
 
 
 \end{document}
