--- a/NORIC_national_annual_report.Rnw
+++ b/NORIC_national_annual_report.Rnw
@@ -413,7 +413,7 @@ indi-kator-er styrings-gruppe}
 Norsk register for invasiv kardiologi (NORIC) ble etablert som nasjonalt medisinsk kvalitetsregister i 2012. NORIC inngår som et av flere kvalitetsregistre knyttet til Hjerte- og karregisteret ved det nasjonale folkehelseinstitutt. Registeret omfatter invasive kardiologiske prosedyrer som koronar angiografi og perkutan koronar intervensjon (PCI), og har også modul for perkutan hjerteklaffbehandling og CT-angiografi.
 Programvaren for registrering av pasientdata ble tatt i bruk ved Haukeland universitetssjukehus (HUS) 1.januar 2013 og ved Universitetssykehuset Nord-Norge (UNN) fra 1. mai 2013. Registerplattformen er senere (2014) blitt implementert ved ytterligere 4 av landets øvrige invasive sentre, mens 2 sykehus ikke har startet ennå.
 Resultatene for 2013 omfatter derfor bare UNN og HUS, og viser stor grad av samsvar når det gjelder andel av pasienter som får utført PCI (41 \%). Andelen av planlagte (elektive) prosedyrer er høyere ved UNN (48,7 \%) enn ved HUS (40,2 \%), mens andelen subakutte prosedyrer er tilsvarende lavere ved UNN (39 \%) sammenlignet med HUS (46 \%). Andelen av pasienter med indikasjon stabil koronarsykdom er høyere ved UNN (38,6 \%) enn ved HUS (29,2 \%), mens andelen ustabil angina er lavere ved UNN (14.4 \%) enn ved HUS (21 \%). Registreringene viser at det er betydelige forskjeller i bruk av supplerende intrakoronar diagnostikk ved de to sykehusene, med større bruk av intravaskulær ultralyd (IVUS) og måling av fractional flow reserve (FFR) ved HUS. 
-Analyser av ventetid for pasienter med non-ST-segment-elevation myocardial infarction (NSTEMI) viser betydelig forskjeller mellom de to sykehusene med vesentlig lengre ventetid ved HUS enn ved UNN. For pasienter som blir innlagt direkte til disse sykehusene er median ventetid 3 døgn ved HUS og 1 døgn ved UNN. For pasienter som først blir innlagt ved annet sykehus er median ventetid ved HUS 5 døgn og 3 døgn ved UNN. Spesielt ved HUS er ventetiden vesentlig lengre enn det som er anbefalt i internasjonale retningslinjer.
+Analyser av ventetid for pasienter med non-ST-segment-elevation myocardial infarction (NSTEMI) viser betydelig forskjeller mellom de to sykehusene med vesentlig lengre ventetid ved HUS enn ved UNN. For pasienter som blir innlagt direkte til disse sykehusene er median ventetid 2 døgn ved HUS og 1 døgn ved UNN. For pasienter som først blir innlagt ved annet sykehus er median ventetid ved HUS 5 døgn og 3 døgn ved UNN. Spesielt ved HUS er ventetiden for mange pasienter vesentlig lengre enn det som er anbefalt i internasjonale retningslinjer.
 
 
 \chapter{Registerbeskrivelse}\label{cha:reg}
@@ -534,7 +534,7 @@ Registreringene viser stor grad av samsvar mellom sykehusene når det gjelder an
 
 Registreringene viser at det er forskjeller i bruk av supplerende intrakoronar diagnostikk ved de to sykehusene, med større bruk av intravaskulær ultralyd (IVUS) og måling av fractional flow reserve (FFR) ved HUS. 
 
-Analyser av ventetid for pasienten med NSTEMI (ikke-ST-elevasjonsinfarkt) viser betydelige forskjeller mellom de to sykehusene med vesentlig lengre ventetid ved HUS enn ved UNN. For pasienter som blir innlagt direkte til disse sykehusene er median ventetid 3 døgn ved HUS og 1 døgn ved UNN.  For pasienter som blir først innlagt ved annet sykehus er median ventetid ved HUS 5 døgn og 3 døgn ved UNN.  Ved HUS er ventetiden vesentlig lengre enn det som er anbefalt i internasjonale retningslinjer.  
+Analyser av ventetid for pasienten med NSTEMI (ikke-ST-elevasjonsinfarkt) viser betydelige forskjeller mellom de to sykehusene med vesentlig lengre ventetid ved HUS enn ved UNN. For pasienter som blir innlagt direkte til disse sykehusene er median ventetid 2 døgn ved HUS og 1 døgn ved UNN.  For pasienter som blir først innlagt ved annet sykehus er median ventetid ved HUS 5 døgn og 3 døgn ved UNN. Spesielt ved HUS er ventetiden for mange pasienter vesentlig lengre enn det som er anbefalt i internasjonale retningslinjer.  
 
 
 
